--- a/public/templates/header.html
+++ b/public/templates/header.html
@@ -9,25 +9,28 @@
 				<span class="icon-bar"></span>
 			</button>
 
-			<a class="navbar-brand" href="#">Voting App</a>
+			<a class="navbar-brand" href="/#/home">Voting App</a>
 
 		</div>
 
 		<div class="navbar-collapse collapse navbar-inverse-collapse">
 			<ul class="nav navbar-nav navbar-right">
 
-				<li><a href="#">Link</a></li>
+			  <li><a href="/#/login">Log In</a></li>
+			  <li><a href="/#/register">Register</a></li>
+				<li><a>Username</a></li>
 
 				<li class="dropdown">
-					<a href="bootstrap-elements.html" data-target="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown
+					<a href="bootstrap-elements.html" data-target="#" class="dropdown-toggle" data-toggle="dropdown">Options
             <b class="caret"></b></a>
 					<ul class="dropdown-menu">
-						<li><a href="#">Action</a></li>
-						<li><a href="#">Another action</a></li>
-						<li><a href="#">Something else here</a></li>
-						<li><a href="#">Separated link</a></li>
+						<li><a href="/#/dashboard">Dashboard</a></li>
+						<li><a href="/#/settings">Change Password</a></li>
+						<li><a href="#">Log Out</a></li>
 					</ul>
 				</li>
+
+				<li></li>
 
 			</ul>
 		</div>
