--- a/public/templates/footer.html
+++ b/public/templates/footer.html
@@ -6,7 +6,7 @@
 
 				<li><a>2015</a></li>
 				<li><a>Author: Nacho Lozano Rosendo</a></li>
-				<li><a href="#">Source Code</a></li>
+				<li><a href="https://github.com/nacholozano/voting-app">Source Code</a></li>
 
 			</ul>
 		</div>
