Rewriting welcome template

--- a/public/stylesheets/globalStyle.less
+++ b/public/stylesheets/globalStyle.less
@@ -61,29 +61,21 @@ main {
 /* Welcome Home */
 
 .welcome {
-	padding: 30px 0 20px;
 	text-align: center;
-	background-color: #76b6ef;
-	h1 {
-		font-size: 500;
+	.container-fluid{
+		background-color: #76b6ef;
+		padding: 70px 0;
+		p{
+	  	margin: 30px 0 10px;
+    	font-size: 2rem;
+		}
 	}
-	p {
-		margin: 30px 5%;
-		font-size: 1.7rem;
-		line-height: 35px;
-	}
-}
-
-.button-div {
-	text-align: center;
-	margin: 80px 0;
-	width: 100%;
 	.btn.btn-lg {
 		padding: 25px 50px;
 		#button-style;
+		margin: 90px 0;
 	}
 }
-
 
 /* Register */
 
