--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,11 +16,14 @@
 
 	<!-- jQuery -->
 	<script src='https://code.jquery.com/jquery-1.11.3.min.js'></script>
-	<script src="https://code.jquery.com/ui/1.11.2/jquery-ui.min.js"></script>
 
 	<!-- Bootstrap -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
+	<!-- Arrive -->
+	<script src="libraries/arrive.min.js"></script>
+
+  <!-- Material -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-material-design/0.5.1/js/material.min.js"></script>
 	<script src='https://cdnjs.cloudflare.com/ajax/libs/bootstrap-material-design/0.5.1/js/ripples.min.js'></script>
 
@@ -28,10 +31,15 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.10/angular-ui-router.js"></script>
 
- <script src="/app/app.js"></script>
+	<script src="/app/app.js"></script>
+	<script src='/app/dashboard/dashboard.js'></script>
 
-  <script>
-		$.material.init()
+	<script>
+		$(document).ready(function () {
+			$(function () {
+				$.material.init();
+			});
+		});
 	</script>
 
 </body>
