--- a/public/templates/head.html
+++ b/public/templates/head.html
@@ -4,8 +4,9 @@
 	</title>
 
 	<meta charset="UTF-8">
-	<meta name="description" content="">
-	<meta name="keywords" content="">
+	<meta name="description" content="Website to create custom polls">
+	<meta name="keywords" content="vote,voting,polls,custom,poll">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<!-- Bootstrap -->
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
