--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,8 +31,11 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.10/angular-ui-router.js"></script>
 
+
 	<script src="/app/app.js"></script>
+	<script src="/app/factories/polls.js"></script>
 	<script src='/app/dashboard/dashboard.js'></script>
+	<script src='/app/home/home.js'></script>
 
 	<script>
 		$(document).ready(function () {
