--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,6 +35,7 @@
 	<script src="/app/app.js"></script>
 	<script src="/app/factories/polls.js"></script>
 	<script src='/app/dashboard/dashboard.js'></script>
+	<script src='/app/poll/poll.js'></script>
 	<script src='/app/home/home.js'></script>
 
 	<script>
