--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,9 +34,12 @@
 
 	<script src="/app/app.js"></script>
 	<script src="/app/factories/polls.js"></script>
+	<script src="/app/factories/auth.js"></script>
 	<script src='/app/dashboard/dashboard.js'></script>
 	<script src='/app/poll/poll.js'></script>
 	<script src='/app/home/home.js'></script>
+	<script src='/app/login/login.js'></script>
+	<script src='/app/register/register.js'></script>
 
 	<script>
 		$(document).ready(function () {
