--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,7 +23,7 @@
 	<!-- Arrive -->
 	<script src="libraries/arrive.min.js"></script>
 
-  <!-- Material -->
+	<!-- Material -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-material-design/0.5.1/js/material.min.js"></script>
 	<script src='https://cdnjs.cloudflare.com/ajax/libs/bootstrap-material-design/0.5.1/js/ripples.min.js'></script>
 
@@ -38,8 +38,7 @@
 	<script src='/app/dashboard/dashboard.js'></script>
 	<script src='/app/poll/poll.js'></script>
 	<script src='/app/home/home.js'></script>
-	<script src='/app/login/login.js'></script>
-	<script src='/app/register/register.js'></script>
+	<script src='/app/sign/sign.js'></script>
 
 	<script>
 		$(document).ready(function () {
