--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
 
-<ng-include src="'/templates/head.html'"></ng-include>
+<ng-include src="'/app/head.html'"></ng-include>
 
 <body ng-app="votingApp">
 
 	<!-- header -->
-	<header ng-include src="'/templates/header.html'"></header>
+	<header ng-include src="'/app/header/header.html'"></header>
 
 	<!-- router -->
 	<main ui-view></main>
 
 	<!-- Footer -->
-	<footer ng-include src="'/templates/footer.html'"></footer>
+	<footer ng-include src="'/app/footer.html'"></footer>
 
 	<!-- jQuery -->
 	<script src='https://code.jquery.com/jquery-1.11.3.min.js'></script>
@@ -33,12 +33,13 @@
 
 
 	<script src="/app/app.js"></script>
-	<script src="/app/factories/polls.js"></script>
-	<script src="/app/factories/auth.js"></script>
+	<script src="/factories/polls.js"></script>
+	<script src="/factories/auth.js"></script>
 	<script src='/app/dashboard/dashboard.js'></script>
 	<script src='/app/poll/poll.js'></script>
 	<script src='/app/home/home.js'></script>
 	<script src='/app/sign/sign.js'></script>
+	<script src='/app/header/header.js'></script>
 
 	<script>
 		$(document).ready(function () {
