--- a/public/stylesheets/globalStyle.less
+++ b/public/stylesheets/globalStyle.less
@@ -127,13 +127,10 @@ main {
 
 .welcome {
 	text-align: center;
-	/*background-image: url('http://img.rasset.ie/00077c50-642.jpg');*/
-	/*background-image: url('http://a-cuatico.bligoo.cl/media/users/18/916420/images/public/197323/encuesta2.jpg?v=1328192628384');*/
 	background-repeat: no-repeat;
 	background-size: 100% 100%;
 	.container-fluid {
-		background-color: rgba(118, 182, 239, 0.8)/*#76b6ef*/
-		;
+		background-color: #76b6ef;
 		padding: 70px 0;
 		p {
 			margin: 30px 0 10px;
@@ -147,32 +144,6 @@ main {
 	}
 }
 
-
-/* Polls */
-
-.polls {
-	#padding;
-	.table-responsive {
-		margin: 50px 0 20px;
-		th,
-		td {
-			text-align: center;
-		}
-	}
-	.search {
-		margin-top: 10px;
-	}
-	table+.btn.btn-lg {
-		#button-style;
-	}
-	.container {
-		padding-bottom: 35px;
-	}
-	.loadMore {
-		text-align: center;
-	}
-}
-
 .noPolls {
 	margin-top: 80px;
 	text-align: center;
@@ -181,7 +152,6 @@ main {
 
 /* Styling paddings and buttons */
 
-.polls,
 .poll,
 .register,
 .login,
@@ -258,12 +228,14 @@ main {
 			td {
 				text-align: center;
 			}
-			button {
+			button:not(.loadMore) {
 				background-color: @deleteButton;
 				border: none;
 				outline: 0;
 			}
-			;
+		}
+		.loadDiv {
+			text-align: center;
 		}
 	}
 }
@@ -283,12 +255,6 @@ main {
 .totalVotes {
 	font-size: 1.8rem;
 }
-
-
-/*
-.percent>h3 {
-	margin-bottom: 20px;
-}*/
 
 .progress .progress-bar {
 	background-color: black;
