--- a/views/index.ejs
+++ b/views/index.ejs
@@ -39,6 +39,7 @@
 	<script src='/app/home/home.js'></script>
 	<script src='/app/sign/sign.js'></script>
 	<script src='/app/header/header.js'></script>
+	<script src='/app/settings/settings.js'></script>
 
 	<script>
 		$(document).ready(function () {
