$scope -> this      login,register,home

--- a/public/stylesheets/globalStyle.less
+++ b/public/stylesheets/globalStyle.less
@@ -10,7 +10,7 @@
 }
 
 #padding() {
-	padding: 30px 8%;
+	padding: 45px 8%;
 	.container {
 		width: 100%;
 	}
@@ -210,7 +210,7 @@ main {
 		margin-top: 50px;
 	}
 	.content {
-		padding: 17px 0 35px;
+		padding: 17px 0 0;
 	}
 	#newPoll>form {
 		.checkbox .privatePoll {
