--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
 	<main ui-view></main>
 
 	<!-- Footer -->
-	<footer ng-include src="'/app/footer.html'"></footer>
+	<footer ng-include src="'/app/footer/footer.html'"></footer>
 
 	<!-- jQuery -->
 	<script src='https://code.jquery.com/jquery-1.11.3.min.js'></script>
@@ -37,7 +37,8 @@
 	<script src="/factories/auth.js"></script>
 	<script src='/app/poll/poll.js'></script>
 	<script src='/app/home/home.js'></script>
-	<script src='/app/sign/sign.js'></script>
+	<script src='/app/login/login.js'></script>
+	<script src='/app/register/register.js'></script>
 	<script src='/app/header/header.js'></script>
 	<script src='/app/settings/settings.js'></script>
 
