[WORKING] [SERVER-SIDE] Vote poll

--- a/public/stylesheets/globalStyle.less
+++ b/public/stylesheets/globalStyle.less
@@ -75,7 +75,12 @@ body,
 .home,
 .welcome,
 .login,
-.dashboard {
+.dashboard,
+.alert,
+.noPolls,
+.formCreatePoll,
+.myPollsTable,
+.poll {
 	-webkit-animation: fadeIn 0.88s infinite;
 	-moz-animation: fadeIn 0.88s infinite;
 	-o-animation: fadeIn 0.88s infinite;
@@ -145,7 +150,7 @@ main {
 }
 
 .noPolls {
-	margin-top: 80px;
+	margin: 80px 0;
 	text-align: center;
 }
 
@@ -267,6 +272,8 @@ main {
 .optionPercent {
 	span:first-child {
 		font-size: 2rem;
+	}
+	span {
 		margin-right: 3%;
 	}
 }
