--- a/public/stylesheets/globalStyle.less
+++ b/public/stylesheets/globalStyle.less
@@ -80,11 +80,12 @@ body,
 .noPolls,
 .formCreatePoll,
 .myPollsTable,
-.poll {
-	-webkit-animation: fadeIn 0.88s infinite;
-	-moz-animation: fadeIn 0.88s infinite;
-	-o-animation: fadeIn 0.88s infinite;
-	animation: fadeIn 0.88s infinite;
+.poll,
+.info {
+	-webkit-animation: fadeIn 0.7s infinite;
+	-moz-animation: fadeIn 0.7s infinite;
+	-o-animation: fadeIn 0.7s infinite;
+	animation: fadeIn 0.7s infinite;
 	-webkit-animation-iteration-count: 1;
 	-moz-animation-iteration-count: 1;
 	-o-animation-iteration-count: 1;
