--- a/public/stylesheets/globalStyle.less
+++ b/public/stylesheets/globalStyle.less
@@ -254,3 +254,10 @@ button.btn:not(.btn-raised).btn-danger,
 		background-color: @deleteButton - 50;
 	}
 }
+
+
+/* login */
+
+.twitter {
+	background-color: #55acee !important;
+}
